Version 0.1a-35
  * Optimized directory loading, heavy gains in time

Version 0.1a-34
  + New find file extensions for content and size matching
  + Created 'revert' button in preferences window
  + Added Russian translation
  + Range selection with mouse and SHIFT key
  * Assign proper icons to directories in advanced rename tool
  * Fixed behavior of 'date format' and 'editor command' entries
  * Changed Commands menu to Tools
  * New plugin format to allow better structuring of plugins
  * Updated Bulgarian translation
  * Updated Hungarian translation
  * Fixed commands menu behavior
  * Changed default window size and column widths

Version 0.1a-33
  + Rename extension: Audio metadata
  + Support for rename extension reordering
  + Find files tool
  + Keybindings editor
  + Open path from history browser in oposite list
  * Issue #76 - Notify user when rename fails
  * Issue #78 - Fixed exception when sort is set for extension column
  * Fixed problem with loading secondary accelerator
  * Properly execute commands and tools
  * Properties window throws exception

Version 0.1a-32
  + Rename extension: Letter case
  + Bookmark accelerators
  + New file information container
  + Archive provider support
  * Updated Bulgarian translation
  * Force shell to update terminal title
  * Properties window will handle items with ampersend in its name
  - Ubuntu appindicator support, not needed anymore

Version 0.1a-31
  + Base class for rename tool extension
  + Advanced rename tool
  + Terminal drag and drop support
  + Added Hungarian translation
  * Fixed crashes with operation dialogs
  * Place windows centered on main window
  * Fixed time formatting issues

Version 0.1a-30
  + New status bar look
  + Handle window state correctly
  * Changed images for minimized copy and move operations
  * Fixed problem with opening files that have unicode characters
  * Properties window will open if application doesn't have config file (issue 64)